--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 				<br>
 				<div id="dashes"></div>
 				<br>
-				<div id="letters" text center>
-					<p> You are guessing a <span id=numLetters>0</span> letters word
+				<div id="letters">
+					<h3> You are guessing a <span id=numLetters> </span> letter word
 					<br>
 					<br>
-					You have <span id="attempts"> </span> attempts left
-				</p>
+					You have <span id="attempts"> </span> attemptsLeft
+				</h3>
 				</div>
 				
 							
