checks all ocurrences

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 					<br>
 					<br>
 					You have <span id="attempts"> </span> attemptsLeft
+					<br>
+					<br>
+					You have pressed the following letters <span id="lettersGuessed"></span> 
 				</h3>
 				</div>
 				
