--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<p>The computer draws a number of dashes equivalent to the number of letters in the word</p> 
 						<p> Try to guess the word one letter at a time. If you suggests a letter that occurs in the word, the dashes will be replaced with the letter in the right places. If the word does not contain the suggested letter, you will loose an attempt (7 wrong answers) until the game ends. You win if you guess the word before loosing 7 attempts</p>	
 							
-						<h4>Press the SPACE BAR to start</h4>
+						<!--<h4>Press the SPACE BAR to start</h4>-->
 					</div>
 			</div>
 
@@ -60,6 +60,9 @@
 					<br>
 					<br>
 					You have pressed the following letters <span id="lettersGuessed"></span> 
+					<br>
+					<br>
+					Win games <span id="win"></span>
 				</h3>
 				</div>
 				
